# lecproc

./: .gitignore  AGENTS.md  Justfile  README.md  cspell.json  pyproject.toml  words.txt
.claude/: settings.local.json
.github/workflows/: checks.yml
src/: cloud_llm_settings.py  common_cli_settings.py  logs.py  path_settings.py
src/audio2text/: __main__.py  settings.py
src/deep_research/: __main__.py  settings.py
src/deep_research/system_prompts/: market_analysis.md
src/pdf2md/: __main__.py  fix_progress.py  llm_types.py  message_utils.py  models.py  prompt_loader.py  rate_limit.py  settings.py  system_prompt.md  typst_fixer.py  typst_parser.py  typst_validator.py  utils.py
src/pdf2md/prompts/: comprehensive_typst_instructions.md
src/pdf2md/prompts/agents/: drafter.yaml  fixer.yaml
src/pdf2md/prompts/document_making/: basic_role.md  escaping.md  formula_env_selection.md  general_rules.md  picture.md  tikz_diagram.md
src/pdf2md/prompts/examples/: 1.md  2.md  3.md
src/pdf2md/prompts/typst/: high_levels.md  math.md  typst_document.md
