[project]
name = "lecproc"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.10.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
    "natsort>=8.4.0",
    "httpx>=0.28.1",
    # audio2text
    "faster-whisper>=1.2.0",
    # pdf2md
    "litellm>=1.77.0",
    # general deep-learning runtimes
    "torch>=2.8.0",
    "orjson>=3.11.3",
    "openai>=1.107.1",
]

[dependency-groups]
lint = [
    "basedpyright>=1.31.4",
    "mypy>=1.17.1",
    "ruff>=0.13.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
# Intel GPU support relies on `pytorch-triton-xpu`, which should also be installed from the PyTorch index
# (and included in `project.dependencies`).
pytorch-triton-xpu = [
  { index = "pytorch-xpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true


[tool.basedpyright]
typeCheckingMode = "recommended"
reportMissingTypeStubs = false
reportImplicitRelativeImport = false
reportExplicitAny = false

[tool.mypy]
disable_error_code = ["prop-decorator", "import-untyped"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM", "E501", "PLR091", "FBT00", "C901"]
