[project]
name = "lecproc"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.10.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
    "natsort>=8.4.0",
    "httpx>=0.28.1",
    # audio2text
    "faster-whisper>=1.2.0",
    # pdf2md
    "litellm>=1.77.0",
    # general deep-learning runtimes
    "orjson>=3.11.3",
    "openai>=1.107.1",
    "openai-agents[litellm]>=0.3.0",
    "regex>=2025.9.1",
    "markdown-it-py[linkify,plugins]>=3.0.0,<4.0.0",
    "mdformat>=0.7.18",
    "huggingface-hub[hf-xet]>=0.35.3",
]

[project.optional-dependencies]
whisperx = [
    "whisperx>=3.1.3",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
]

[dependency-groups]
lint = [
    "basedpyright>=1.31.4",
    "mypy>=1.17.1",
    "ruff>=0.13.0",
    "types-regex>=2025.9.1.20250903",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' and platform_machine != 'x86_64'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchaudio = [
  { index = "pytorch-cu129", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' and platform_machine != 'x86_64'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
  { index = "pytorch-cu129", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' and platform_machine != 'x86_64'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
# Intel GPU support relies on `pytorch-triton-xpu`, which should also be installed from the PyTorch index
# (and included in `project.dependencies`).
pytorch-triton-xpu = [
  { index = "pytorch-xpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[tool.basedpyright]
typeCheckingMode = "recommended"
reportMissingTypeStubs = false
reportImplicitRelativeImport = false
reportExplicitAny = false
reportMissingImports = "none"
reportMissingModuleSource = "none"
reportAny = "none"
reportUnnecessaryTypeIgnoreComment = "none"

[tool.mypy]
disable_error_code = ["prop-decorator", "import-untyped"]

[[tool.mypy.overrides]]
module = ["torch", "torchaudio", "pyannote.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM", "E501", "PLR091", "FBT00", "C901"]
